Add script to generate waterbirds dataset.
Log clustering metrics to wandb.

--- a/configs/mnist_george_config.json
+++ b/configs/mnist_george_config.json
@@ -47,7 +47,9 @@
         "model": "gmm",
         "metric_types": [
             "mean_loss",
-            "composition"
+            "composition",
+            "ari",
+            "nmi"
         ],
         "search_k": true,
         "overcluster": true,
